fixed overlap of components

--- a/server/public/styles/main.css
+++ b/server/public/styles/main.css
@@ -158,7 +158,7 @@ span {
   position: fixed;
   bottom: 5vw;
   right: 3vw;
-  z-index: -1;
+  z-index: 1;
 }
 
 #slider-box {
